@@ -1,4 +1,5 @@
 v0.12
+	* ADD : Check if there are empty roads/relations during a download and propose to mark them for deletion
 	* ADD : "visible" action in layers menu
 	* FIX : properly detect if roads are breakable/joinable and update menus accordingly
 	* FIX : Handle "NotYetDownloaded" for Relations
